force-app/main/default/objects/Health_Snapshot__c/Health_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Health Snapshot</label>
    <nameField>
        <displayFormat>HS-{0000000}</displayFormat>
        <label>Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>