force-app/main/default/objects/Health_Snapshot__c/fields/API_Requests_Max__c.field-meta.xml
<CustomField>
    <fullName>API_Requests_Max__c</fullName>
    <label>API Requests Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>