force-app/main/default/objects/Health_Snapshot__c/fields/Connected_Org__c.field-meta.xml
<CustomField>
    <fullName>Connected_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Org</label>
    <referenceTo>Connected_Org__c</referenceTo>
    <relationshipLabel>Health Snapshots</relationshipLabel>
    <relationshipName>Health_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>