force-app/main/default/objects/Health_Snapshot__c/fields/Data_Limit_MB__c.field-meta.xml
<CustomField>
    <fullName>Data_Limit_MB__c</fullName>
    <description>Total Data Storage capacity allocated to the organization (MB).</description>
    <label>Data Storage Limit (MB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>