force-app/main/default/objects/Health_Snapshot__c/fields/Data_Storage_Max__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Max__c</fullName>
    <description>Total Data Storage capacity allocated to the organization (MB).</description>
    <label>Data Storage Max (MB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>