force-app/main/default/objects/Health_Snapshot__c/fields/Data_Storage_MB__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_MB__c</fullName>
    <label>Data Storage (MB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>