force-app/main/default/objects/Health_Snapshot__c/fields/File_Storage_Max__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_Max__c</fullName>
    <description>Total File Storage capacity allocated to the organization (MB).</description>
    <label>File Storage Max (MB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>