force-app/main/default/objects/Health_Snapshot__c/fields/File_Storage_MB__c.field-meta.xml
<CustomField>
    <fullName>File_Storage_MB__c</fullName>
    <label>File Storage (MB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>