force-app/main/default/objects/Health_Snapshot__c/fields/Org_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Org_Health_Score__c</fullName>
    <label>Health Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>