force-app/main/default/objects/Health_Snapshot__c/fields/Total_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Licenses__c</fullName>
    <description>Total number of User Licenses available in the organization.</description>
    <label>Total Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>